--- a/react-projects/drum-machine/src/style.scss
+++ b/react-projects/drum-machine/src/style.scss
@@ -1,10 +1,9 @@
 
 body {
   font-family: "Metal Mania", sans-serif;
-  font-size: 16px;
   color: black;
   background-color: lightgray;
-  max-width: 500px;
+  max-width: 32em;
   min-width: 320px;
   margin: auto;
   text-align: center;
@@ -67,7 +66,8 @@ button.drum-pad {
   border-radius: 0.3em;
 }
 
-button.drum-pad:hover {
+button.drum-pad:hover,
+button.drum-pad:focus {
   background-color: hsl(0, 0%, 27%);
   border-color: hsl(0, 0%, 72%);
 }
@@ -100,7 +100,7 @@ div.switch {
     float: right;
     font-size: 1em;
     margin: 1.25em 0 0;
-    width: 10%;
+    width: 12%;
     height: 0.5em;
     -webkit-appearance: none;  /* Override default CSS styles. */
     appearance: none;
@@ -137,18 +137,64 @@ div.slider {
   }
 }
 
+/* Keyboard and mouse focus for all elements. */
+:focus {
+  outline: 4px dashed black;
+}
+
 /*************************
  ***   Media Queries   ***
  *************************/
 
-@media (max-width: 400px) {
-  body {
-    font-size: 14px;
+@media (min-width: 80em) {
+  html {
+    font-size: 1.2em;
   }
 }
 
-@media (max-width: 350px) {
-  body {
-    font-size: 12px;
+@media (min-width: 100em) {
+  html {
+    font-size: 1.4em;
+  }
+}
+
+@media (min-width: 120em) {
+  html {
+    font-size: 1.6em;
+  }
+}
+
+@media (min-width: 140em) {
+  html {
+    font-size: 1.8em;
+  }
+}
+
+@media (min-width: 160em) {
+  html {
+    font-size: 2em;
+  }
+}
+
+@media (max-width: 31em) {
+  div#drum-grid {
+    /* Remove the two edge column gaps. */
+    $column-gap: 8%;
+    $column-width: (100% - $column-gap * 2) / 3;
+
+    grid-template-columns: repeat(3, $column-width);
+    justify-content: space-between;
+  }
+
+  div.switch {
+    input.range-input {
+      width: 15%;
+    }
+  }
+
+  div.slider {
+    input.range-input {
+      width: 55%;
+    }
   }
 }
