--- a/html-projects/documentation-page/src/style.css
+++ b/html-projects/documentation-page/src/style.css
@@ -19,6 +19,7 @@ body {
 
 h1 {
   font-family: Anton, sans-serif;
+  font-size: 1.5em;
   text-align: center;
 }
 
@@ -61,6 +62,17 @@ a.nav-link:visited {
   color: snow;
 }
 
+/* Keyboard and mouse focus. */
+:focus {
+  z-index: 1;
+  outline: medium dotted white;
+}
+
+/* Remove mouse focus if :focus-visible is supported. */
+:focus:not(:focus-visible) {
+  outline: none;
+}
+
 main {
   margin-left: var(--nav-width);
   padding: 0 1em;
@@ -78,13 +90,18 @@ ul, ol {
   padding-left: 2em;
 }
 
+ul ul {
+  padding-left: 1em;
+}
+
 .code {
-  width: min-content;
+  max-width: min-content;
   margin-left: 1em;
   padding-right: 1em;
   color: darkslategray;
   background-color: whitesmoke;
   border-radius: 0.4em;
+  overflow-x: auto;
 }
 
 a {
@@ -99,60 +116,74 @@ a:visited {
  ***   Media Queries   ***
  *************************/
 
-/* Min width. */
-@media (min-width: 1440px) {
-  html {
-    font-size: 1.1em;
-  }
-}
+/* Increase font size for larger viewports. */
+ @media (min-width: 80em) {
+   html {
+     font-size: 1.2em;
+   }
+ }
 
-@media (min-width: 1920px) {
-  html {
-    font-size: 1.2em;
-  }
-}
+ @media (min-width: 100em) {
+   html {
+     font-size: 1.4em;
+   }
+ }
 
-/* Max width. */
-@media (max-width: 768px) {
-  body {
-    font-size: 0.9em;
-  }
-}
+ @media (min-width: 120em) {
+   html {
+     font-size: 1.6em;
+   }
+ }
 
-@media (max-width: 600px) {
+ @media (min-width: 140em) {
+   html {
+     font-size: 1.8em;
+   }
+ }
+
+ @media (min-width: 160em) {
+   html {
+     font-size: 2em;
+   }
+ }
+
+/* Reduce the nav bar for smaller viewports. */
+@media (max-width: 48em) {
   :root {
     --nav-width: 14em;
   }
+}
 
-  body {
-    font-size: 0.8em;
+@media (max-width: 40em) {
+  :root {
+    --nav-width: 9em;
+  }
+
+  ul, ol {
+    padding-left: 1.5em;
+  }
+
+  ul ul {
+    padding-left: 0.5em;
   }
 }
 
-@media (max-width: 500px) {
-  html {
+@media (max-width: 30em) {
+  body {
     font-size: 0.9em;
   }
 
-  .code {
-    font-size: 0.8em;
+  :root {
+    --nav-width: 8em;
+  }
+
+  h1 {
+    font-size: 1.3em;
   }
 }
 
-@media (max-width: 430px) {
+@media (max-width: 25em) {
   body {
-    font-size: 0.7em;
-  }
-}
-
-@media (max-width: 370px) {
-  .code {
-    font-size: 0.7em;
-  }
-}
-
-@media (max-width: 345px) {
-  html {
     font-size: 0.8em;
   }
 }
