--- a/html-projects/survey-form/src/style.css
+++ b/html-projects/survey-form/src/style.css
@@ -19,7 +19,7 @@ header, footer {
 
 /* The main form area. */
 main {
-  max-width: 600px;
+  max-width: 38em;
   margin: auto;
   padding: 0.7em 1em 1em;
   background-color: rgba(0, 0, 0, 0.07);
@@ -85,22 +85,50 @@ button:active {
   border-style: inset;
 }
 
+/* Keyboard and mouse focus. */
+:focus {
+  outline: medium dashed black;
+}
+
+/* Remove mouse focus if :focus-visible is supported. */
+:focus:not(:focus-visible) {
+  outline: none;
+}
+
 /*************************
  ***   Media Queries   ***
  *************************/
 
-@media (min-width: 1440px) {
-  html {
-    font-size: 1.1em;
-  }
+ @media (min-width: 80em) {
+   html {
+     font-size: 1.2em;
+   }
+ }
 
-  input, select, textarea {
-    padding: 3px;
-  }
-}
+ @media (min-width: 100em) {
+   html {
+     font-size: 1.4em;
+   }
 
-@media (min-width: 1920px) {
-  html {
-    font-size: 1.2em;
-  }
-}
+   input, select, textarea {
+     padding: 3px;
+   }
+ }
+
+ @media (min-width: 120em) {
+   html {
+     font-size: 1.6em;
+   }
+ }
+
+ @media (min-width: 140em) {
+   html {
+     font-size: 1.8em;
+   }
+ }
+
+ @media (min-width: 160em) {
+   html {
+     font-size: 2em;
+   }
+ }
