--- a/d3-projects/choropleth/src/style.css
+++ b/d3-projects/choropleth/src/style.css
@@ -23,8 +23,13 @@ a:visited {
 /* The container holding the <svg> element. */
 main#svg-container {
   position: relative;
-  max-width: 1400px;
-  margin: auto;
+}
+
+/* Fix the <svg> font-size to 16px (i.e. 16 user units) for correct
+   user unit sizes inside the <svg> viewBox. The viewBox will scale
+   correctly when resizing. */
+svg {
+  font-size: 16px;
 }
 
 /* The counties on the plot. */
@@ -53,9 +58,12 @@ main#svg-container {
 
 /* The tooltip. */
 #tooltip {
-  font-size: 1.3em;
+  font-size: 1.1em;
   padding: 0.7em;
   position: absolute;
+  right: 1%;
+  max-width: max-content;
+  transform: translate(0%, -100%);
   background-color: hsl(0, 100%, 25%);
   border: 2px solid hsl(0, 100%, 10%);
   box-shadow: 0px 0px 0.4em 0.2em hsl(0, 0%, 30%);
@@ -70,17 +78,53 @@ main#svg-container {
   pointer-events: none;
 }
 
+/* Keyboard focus for the link. */
+:focus {
+  outline: medium dotted white;
+}
+
 /*************************/
 /***   Media Queries   ***/
 /*************************/
 
-@media (max-width: 1024px) {
+@media (min-width: 80em) {
+  html {
+    font-size: 1.2em;
+  }
+}
+
+@media (min-width: 100em) {
+  html {
+    font-size: 1.4em;
+  }
+}
+
+@media (min-width: 120em) {
+  html {
+    font-size: 1.6em;
+  }
+}
+
+@media (min-width: 140em) {
+  html {
+    font-size: 1.8em;
+  }
+}
+
+@media (min-width: 160em) {
+  html {
+    font-size: 2em;
+  }
+}
+
+@media (max-width: 64em) {
   #tooltip {
     font-size: 1em;
   }
 }
 
-@media (max-width: 768px) {
+
+@media (max-width: 48em) {
   h1 {
     font-size: 2.5em;
   }
@@ -91,7 +135,7 @@ main#svg-container {
   }
 }
 
-@media (max-width: 500px) {
+@media (max-width: 32em) {
   h1 {
     font-size: 2em;
   }
@@ -106,7 +150,7 @@ main#svg-container {
   }
 }
 
-@media (max-width: 400px) {
+@media (max-width: 25em) {
   h1 {
     font-size: 1.5em;
   }
