--- a/d3-projects/heatmap/src/style.css
+++ b/d3-projects/heatmap/src/style.css
@@ -15,21 +15,27 @@ h1 {
 }
 
 header p {
-  font-size: 1.3em;
+  font-size: 1.7em;
 }
 
 /* The container holding the <svg> canvas. */
 main#svg-container {
   position: relative;
-  max-width: 1200px;
   margin: 2em auto;
   background-color: lightcyan;
   border: 1px solid darkslategray;
   box-shadow: 0px 0px 0.6em 0.3em darkslategray;
 }
 
-svg, footer {
-  font-size: 1rem;
+/* Fix the <svg> font-size to 16px (i.e. 16 user units) for correct
+   user unit sizes inside the <svg> viewBox. The viewBox will scale
+   correctly when resizing. */
+svg {
+  font-size: 16px;
+}
+
+footer {
+  font-size: 1.2rem;
 }
 
 /* The axes and their labels. */
@@ -56,11 +62,14 @@ svg, footer {
 
 /* The tooltip container. */
 #tooltip {
+  font-size: 1.2em;
   position: absolute;
+  width: max-content;
+  transform: translate(-47%, -100%);
   padding: 0.4em 0.5em;
   border: 1px solid slategray;
   box-shadow: 0px 0px 0.25em 0.125em slategray;
-  line-height: 1.5em;
+  line-height: 1.5;
   pointer-events: none;
 }
 
@@ -69,71 +78,113 @@ svg, footer {
   pointer-events: none;
 }
 
+/* Keyboard focus for the link. */
+:focus {
+  outline: medium dashed black;
+}
+
 /*************************/
 /***   Media Queries   ***/
 /*************************/
 
-@media (max-width: 1024px) {
-  #tooltip {
-    padding: 0.3em 0.5em;
-    line-height: 1.4em;
+@media (min-width: 80em) {
+  html {
+    font-size: 1.2em;
   }
 }
 
-@media (max-width: 768px) {
+@media (min-width: 100em) {
+  html {
+    font-size: 1.4em;
+  }
+}
+
+@media (min-width: 120em) {
+  html {
+    font-size: 1.6em;
+  }
+}
+
+@media (min-width: 140em) {
+  html {
+    font-size: 1.8em;
+  }
+}
+
+@media (min-width: 160em) {
+  html {
+    font-size: 2em;
+  }
+}
+
+@media (max-width: 64em) {
+  #tooltip {
+    font-size: 1.1em;
+    padding: 0.3em 0.5em;
+    line-height: 1.4;
+  }
+}
+
+@media (max-width: 48em) {
   h1 {
     font-size: 2.5em;
   }
 
   #tooltip {
+    font-size: 1em;
+  }
+}
+
+@media (max-width: 44em) {
+  #tooltip {
     font-size: 0.9em;
   }
 }
 
-@media (max-width: 700px) {
-  #tooltip {
-    font-size: 0.8em;
-  }
-}
-
-@media (max-width: 600px) {
+@media (max-width: 38em) {
   h1 {
     font-size: 2em;
   }
 
   #tooltip {
-    font-size: 0.7em;
+    font-size: 0.8em;
   }
 }
 
-@media (max-width: 540px) {
+@media (max-width: 34em) {
+  /* Changing the body font-size will affect the title, subtitle and tooltip
+      but will not affect the svg or the footer. */
   body {
     font-size: 0.9em;
   }
 
   #tooltip {
-    line-height: 1.3em;
+    line-height: 1.3;
   }
 }
 
-@media (max-width: 460px) {
+@media (max-width: 29em) {
   body {
     font-size: 0.8em;
   }
 }
 
-@media (max-width: 400px) {
+@media (max-width: 25em) {
   #tooltip {
-    font-size: 0.6em;
+    font-size: 0.7em;
+  }
+
+  footer {
+    font-size: 1.1rem;
   }
 }
 
-@media (max-width: 350px) {
+@media (max-width: 22em) {
   #tooltip {
     padding: 0.2em 0.4em;
   }
 
   footer {
-    font-size: 0.9rem;
+    font-size: 1rem;
   }
 }
